tests/reference/ast-implied_do_loops10-3298b64.stderr
syntax error: Token ',' is unexpected here
 --> tests/../integration_tests/implied_do_loops10.f90:8:37
  |
8 |     data (colours%rgb(i), i=1, 3) /1, 2, 3/
  |                                     ^ 
